prevent copy button from covering up code in code blocks

--- a/components/Code/Code.module.css
+++ b/components/Code/Code.module.css
@@ -29,6 +29,12 @@ figure:has(.highlighted) {
   text-decoration: var(--shiki-dark-text-decoration);
 }
 
+.highlighted > [data-line]:nth-of-type(1),
+.highlighted > [data-line]:nth-of-type(2) {
+  /* excessive right padding to prevent copy button from covering the first two lines of code */
+  padding-right: 4em;
+}
+
 .highlighted[data-line-numbers] {
   counter-reset: line;
 }
